Added more stuff to landing page

--- a/index.html
+++ b/index.html
@@ -74,14 +74,16 @@
   
     Hi! My name is Zhenghao (Kevin) Zhu.
     <p>
-      I'm currently studying Computer Science and Applied Mathematics at Stony Brook University which has allowed me to pursue my interest in Software Development and Data Science. 
-      I spend my time balancing classes and working as an Undergraduate Research Assistant in the Moffitt Group at the Department of Biomedical Informatics at Stony Brook University, performing 
+      I'm currently studying Computer Science and Applied Mathematics at <u><b>Stony Brook University</b></u> which has allowed me to pursue my interest in Software Development and Data Science. 
+      I spend my time balancing classes and working as an Undergraduate Research Assistant in the <u><b>Moffitt Group</b></u> at the Department of Biomedical Informatics at Stony Brook University, performing 
       data analysis in genome data to develop tailored treatments for pancreatic cancer.
     </p>
     <p>
-      I also have experience working with the <a target="_blank" rel="noopener noreferrer" href="https://eiselegroup.com/">Eisele Group</a> doing research in fundamentals of self-assembling nano-structures 
+      I also have experience working with the <u><b>Eisele Group</b></u> doing research in fundamentals of self-assembling nano-structures 
       and the light-matter interactions within them to create more efficient forms of renewable energy.
-      
+    </p>
+    <p>
+      This past summer, I spent 12 weeks as a Software Engineer Intern at <u><b>Microsoft</b></u> in the Azure Infrastructure Division working on telemetry applications to monitor and improve server health.
     </p>
     <o>
       Contact me at <a href="mailto:kevinzhuzhenghao@gmail">my email</a> for any software engineering or data analysis positions you think I'm a good fit for.
