--- a/projects/index.html
+++ b/projects/index.html
@@ -79,7 +79,7 @@
 <p>The website you are looking at right now was created for the purpose of showing my personal projects and write guides on things that I find interesting. A cool little feature the website has is the button you see in the upper-right corner which changes the website from dark-mode to light-mode and viceversa. Please take a look around and contact me if you have any questions.</p>
 <p><strong>Technologies:</strong> <a href="https://gohugo.io/">Hugo</a>, <a href="https://en.wikipedia.org/wiki/JavaScript">JavaScript</a>, <a href="https://www.w3schools.com/html/html_css.asp">HTML/CSS</a></p>
 <p><strong>Code:</strong> <a href="https://github.com/ZhenghaoZhu/zhenghaozhu.me">https://github.com/ZhenghaoZhu/zhenghaozhu.me</a></p>
-<p><strong>Demo:</strong> <a href="https://zhenghaozhu.me/">You are looking at it!</a></p>
+<p><strong>Demo:</strong> <a href="http://zhenghaozhu.github.io/">You are looking at it!</a></p>
 <!-- raw HTML omitted -->
 
   
