--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     content="" />
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
-<link rel="canonical" href="https://zhenghaozhu.github.io/" />
+<link rel="canonical" href="https://zhenghaozhu.com/" />
 
 
 <title>
@@ -48,7 +48,7 @@
 
 
 
-<link rel="alternate" type="application/rss+xml" href="https://zhenghaozhu.github.io/index.xml" title="Zhenghao (Kevin) Zhu" />
+<link rel="alternate" type="application/rss+xml" href="https://zhenghaozhu.com/index.xml" title="Zhenghao (Kevin) Zhu" />
 
 
 
@@ -78,7 +78,7 @@
         <span class="header__right">
             
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="https://zhenghaozhu.github.io/about">About</a></li><li><a href="https://zhenghaozhu.github.io/projects">Projects</a></li><li><a href="https://zhenghaozhu.github.io/posts">Posts</a></li><li><a href="https://zhenghaozhu.github.io/book-list">Book List</a></li>
+    <ul class="menu__inner"><li><a href="https://zhenghaozhu.com/about">About</a></li><li><a href="https://zhenghaozhu.com/projects">Projects</a></li><li><a href="https://zhenghaozhu.com/posts">Posts</a></li><li><a href="https://zhenghaozhu.com/book-list">Book List</a></li>
     </ul>
 </nav>
 
