--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
     content="" />
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
-<link rel="canonical" href="https://zhenghaozhu.github.io/404.html" />
+<link rel="canonical" href="https://zhenghaozhu.com/404.html" />
 
 
 <title>
@@ -76,7 +76,7 @@
         <span class="header__right">
             
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="https://zhenghaozhu.github.io/about">About</a></li><li><a href="https://zhenghaozhu.github.io/projects">Projects</a></li><li><a href="https://zhenghaozhu.github.io/posts">Posts</a></li><li><a href="https://zhenghaozhu.github.io/book-list">Book List</a></li>
+    <ul class="menu__inner"><li><a href="https://zhenghaozhu.com/about">About</a></li><li><a href="https://zhenghaozhu.com/projects">Projects</a></li><li><a href="https://zhenghaozhu.com/posts">Posts</a></li><li><a href="https://zhenghaozhu.com/book-list">Book List</a></li>
     </ul>
 </nav>
 
@@ -108,8 +108,8 @@
 			<h1>404</h1>
 			<p>Page Not Found.</p>
 			<p class="btn-404">
-				<a href="https://zhenghaozhu.github.io"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>Home</a>
-				<a href="https://zhenghaozhu.github.io/posts"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-archive"><polyline points="21 8 21 21 3 21 3 8"></polyline><rect x="1" y="3" width="22" height="5"></rect><line x1="10" y1="12" x2="14" y2="12"></line></svg></a>
+				<a href="https://zhenghaozhu.com"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>Home</a>
+				<a href="https://zhenghaozhu.com/posts"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-archive"><polyline points="21 8 21 21 3 21 3 8"></polyline><rect x="1" y="3" width="22" height="5"></rect><line x1="10" y1="12" x2="14" y2="12"></line></svg></a>
 			</p>
 		</div>
 	</div>
