--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
     content="" />
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
-<link rel="canonical" href="https://zhenghaozhu.com/404.html" />
+<link rel="canonical" href="https://zhenghaozhu.me/404.html" />
 
 
 <title>
@@ -26,7 +26,7 @@
 
 
 
-<link rel="stylesheet" href="/main.min.9b8ec0f5bf87f8f6b5fa88e1018ff01b9be98e4e3a2f27a138fe2c2aceaef679.css">
+<link rel="stylesheet" href="/main.min.ca68beea40ff855ff0b35ac9ce63ba578e7bf0c726c40597dab063d996d82401.css">
 
 
 
@@ -37,8 +37,7 @@
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#252627">
 <link rel="shortcut icon" href="/favicon.ico">
 <meta name="theme-color" content="#252627"><meta itemprop="name" content="404 Page not found">
-<meta itemprop="description" content="Hi! My name is Zhenghao (Kevin) Zhu.">
-<meta name="twitter:card" content="summary"/>
+<meta itemprop="description" content="Hi! My name is Zhenghao (Kevin) Zhu."><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content="Hi! My name is Zhenghao (Kevin) Zhu."/>
 
@@ -76,7 +75,7 @@
         <span class="header__right">
             
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="https://zhenghaozhu.com/about">About</a></li><li><a href="https://zhenghaozhu.com/projects">Projects</a></li><li><a href="https://zhenghaozhu.com/posts">Posts</a></li><li><a href="https://zhenghaozhu.com/book-list">Book List</a></li>
+    <ul class="menu__inner"><li><a href="https://zhenghaozhu.me/about">About</a></li><li><a href="https://zhenghaozhu.me/projects">Projects</a></li><li><a href="https://zhenghaozhu.me/posts">Posts</a></li><li><a href="https://zhenghaozhu.me/book-list">Book List</a></li>
     </ul>
 </nav>
 
@@ -108,8 +107,8 @@
 			<h1>404</h1>
 			<p>Page Not Found.</p>
 			<p class="btn-404">
-				<a href="https://zhenghaozhu.com"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>Home</a>
-				<a href="https://zhenghaozhu.com/posts"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-archive"><polyline points="21 8 21 21 3 21 3 8"></polyline><rect x="1" y="3" width="22" height="5"></rect><line x1="10" y1="12" x2="14" y2="12"></line></svg></a>
+				<a href="https://zhenghaozhu.me"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>Home</a>
+				<a href="https://zhenghaozhu.me/posts"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-archive"><polyline points="21 8 21 21 3 21 3 8"></polyline><rect x="1" y="3" width="22" height="5"></rect><line x1="10" y1="12" x2="14" y2="12"></line></svg></a>
 			</p>
 		</div>
 	</div>
@@ -119,7 +118,7 @@
                 <footer class="footer">
     <div class="footer__inner">
         <div class="footer__content">
-            <span>&copy; 2021</span>
+            <span>&copy; 2022</span>
             
             <span>Powered by <a href="http://gohugo.io" target= "_blank" rel = "noopener">Hugo</a></span>
         </div>
@@ -139,7 +138,7 @@
 
 
 
-<script type="text/javascript" src="/bundle.min.4c3fb12a087ceed4a52cb5d57068a9795c7069617a01ca70f788052ad66e1791779e6c72686e1dc0ca13dc03b0203204b6566bb0dd1ee80de2b7ff4d8fe53db2.js" integrity="sha512-TD&#43;xKgh87tSlLLXVcGipeVxwaWF6Acpw94gFKtZuF5F3nmxyaG4dwMoT3AOwIDIEtlZrsN0e6A3it/9Nj&#43;U9sg=="></script>
+<script type="text/javascript" src="/bundle.min.f82006508c6d36abcec95e9b906088fbca9243d51fe6829ae9ac1d9e3b39675b854c5590dd8e6a693465672367de6736756151368a924b5fc7b6305ca74dc618.js" integrity="sha512-&#43;CAGUIxtNqvOyV6bkGCI&#43;8qSQ9Uf5oKa6awdnjs5Z1uFTFWQ3Y5qaTRlZyNn3mc2dWFRNoqSS1/HtjBcp03GGA=="></script>
 
 
 
